content/_generated-doc/2.13/config/quarkus-kubernetes-config-group-ingress-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-ingress-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-ingress-config_configuration]]link:#quarkus-kubernetes-config-group-ingress-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.expose]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.expose[quarkus.kubernetes.ingress.expose]`

[.description]
--
If true, the service will be exposed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_EXPOSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_EXPOSE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.host]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.host[quarkus.kubernetes.ingress.host]`

[.description]
--
The host under which the application is going to be exposed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.annotations-annotations]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.annotations-annotations[quarkus.kubernetes.ingress.annotations]`

[.description]
--
Custom annotations to add to exposition (route or ingress) resources

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.enabled]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.enabled[quarkus.kubernetes.ingress.tls."tls".enabled]`

[.description]
--
If true, it will use the TLS configuration in the generated Ingress resource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.hosts]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.hosts[quarkus.kubernetes.ingress.tls."tls".hosts]`

[.description]
--
The list of hosts to be included in the TLS certificate. By default, it will use the application host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===