content/_generated-doc/2.16/config/quarkus-kubernetes-config-group-ingress-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-ingress-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-ingress-config_configuration]]link:#quarkus-kubernetes-config-group-ingress-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.expose]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.expose[quarkus.kubernetes.ingress.expose]`

[.description]
--
If true, the service will be exposed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_EXPOSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_EXPOSE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.host]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.host[quarkus.kubernetes.ingress.host]`

[.description]
--
The host under which the application is going to be exposed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.ingress-class-name]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.ingress-class-name[quarkus.kubernetes.ingress.ingress-class-name]`

[.description]
--
The class of the Ingress. If the ingressClassName is omitted, a default Ingress class is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_INGRESS_CLASS_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_INGRESS_CLASS_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.annotations-annotations]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.annotations-annotations[quarkus.kubernetes.ingress.annotations]`

[.description]
--
Custom annotations to add to exposition (route or ingress) resources

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.enabled]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.enabled[quarkus.kubernetes.ingress.tls."tls".enabled]`

[.description]
--
If true, it will use the TLS configuration in the generated Ingress resource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.hosts]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.tls.-tls-.hosts[quarkus.kubernetes.ingress.tls."tls".hosts]`

[.description]
--
The list of hosts to be included in the TLS certificate. By default, it will use the application host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_TLS__TLS__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.host]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.host[quarkus.kubernetes.ingress.rules."rules".host]`

[.description]
--
The host under which the rule is going to be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.path]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.path[quarkus.kubernetes.ingress.rules."rules".path]`

[.description]
--
The path under which the rule is going to be used. Default is "/".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.path-type]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.path-type[quarkus.kubernetes.ingress.rules."rules".path-type]`

[.description]
--
The path type strategy to use by the Ingress rule. Default is "Prefix".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__PATH_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__PATH_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Prefix`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-name]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-name[quarkus.kubernetes.ingress.rules."rules".service-name]`

[.description]
--
The service name to be used by this Ingress rule. Default is the generated service name of the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-port-name]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-port-name[quarkus.kubernetes.ingress.rules."rules".service-port-name]`

[.description]
--
The service port name to be used by this Ingress rule. Default is the port name of the generated service of the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_PORT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_PORT_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-port-number]]`link:#quarkus-kubernetes-config-group-ingress-config_quarkus.kubernetes.ingress.rules.-rules-.service-port-number[quarkus.kubernetes.ingress.rules."rules".service-port-number]`

[.description]
--
The service port number to be used by this Ingress rule. This is only used when the servicePortName is not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_PORT_NUMBER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INGRESS_RULES__RULES__SERVICE_PORT_NUMBER+++`
endif::add-copy-button-to-env-var[]
--|int 
|

|===